# doco_uav

./: .gitignore
src/uav_bridge/: CMakeLists.txt  README.md  package.xml
src/uav_bridge/include/uav_bridge/: flight_mode_manager.hpp  math_utils.hpp  openvins_ev_guard.hpp  openvins_px4_vision_bridge_logic.hpp  px4_commander.hpp  px4_odom_adapter_logic.hpp  sim_vio_odometry_logic.hpp  uav_control_logic.hpp  uav_state_bridge_logic.hpp
src/uav_bridge/src/: flight_mode_manager.cpp  fmu_topic_namespace_bridge_node.cpp  frame_aligner.cpp  height_measurement_bridge_node.cpp  math_utils.cpp  mono_camera_bridge_node.cpp  mono_camera_source_node.cpp  mono_video_recorder_node.cpp  offboard_bridge_node.cpp  openvins_ev_guard.cpp  openvins_px4_vision_bridge_logic.cpp  openvins_px4_vision_bridge_node.cpp  openvins_state_bridge_node.cpp  optical_flow_bridge_node.cpp  position_delta_node.cpp  px4_commander.cpp  px4_odom_adapter_logic.cpp  px4_odom_adapter_node.cpp  px4_planar_state_reader_node.cpp  rangefinder_bridge_node.cpp  rc_safety_mux_node.cpp  sim_vio_odometry_logic.cpp  sim_vio_odometry_node.cpp  stereo_camera_bridge_node.cpp  tf_bridge_node.cpp  trajectory_path_publisher_node.cpp  uav_control_node.cpp  uav_state_bridge_logic.cpp  uav_state_bridge_node.cpp
src/uav_bridge/srv/: BodyPositionDelta.srv
src/uav_bridge/test/: test_openvins_ev_guard.cpp  test_openvins_px4_vision_bridge_logic.cpp  test_px4_odom_adapter_logic.cpp  test_sim_vio_odometry_logic.cpp  test_uav_control_logic.cpp  test_uav_state_bridge_logic.cpp
src/uav_bringup/: CMakeLists.txt  package.xml
src/uav_bringup/config/: relative_position_fusion_uav_demo.yaml
src/uav_bringup/config/camera/: uav_mono_camera.example.yaml
src/uav_bringup/config/openvins/orbbec_gemini336/: estimator_config.diag_timeoffset.yaml  estimator_config.diag_timeoffset_extrinsics.yaml  estimator_config.flight.yaml  estimator_config.phase2_jetson_seed.yaml  estimator_config.phase2_seed.yaml  estimator_config.phase3_jetson_seed.yaml  estimator_config.yaml  kalibr_imu_chain.yaml  kalibr_imucam_chain.yaml  mask_orbbec_right_ir_bottom_1_8.pgm
src/uav_bringup/config/openvins/orbbec_stereo_imu/: estimator_config.yaml  kalibr_imucam_chain.yaml
src/uav_bringup/config/openvins/orbbec_stereo_imu/bootstrap/: estimator_config.calibration.autoexposure_balanced.yaml  estimator_config.calibration.autoexposure_msckf_bias.yaml  estimator_config.calibration.autoexposure_msckf_focus.yaml  estimator_config.calibration.autoexposure_slam_bias.yaml  estimator_config.calibration.autoexposure_slam_bias_dense.yaml  estimator_config.calibration.autoexposure_slam_bias_window.yaml  estimator_config.calibration.autoexposure_tracking.yaml  estimator_config.calibration.motion_robust.yaml  estimator_config.calibration.yaml  estimator_config.flight.feature_balanced.yaml  estimator_config.flight.feature_dense.yaml  (+4 more)
src/uav_bringup/config/px4/airframes/: 4901_gz_uav
src/uav_bringup/config/px4/rc/: px4-rc.params
src/uav_bringup/config/rviz/: openvins_orbbec.rviz  openvins_orbbec_mono_apriltag.rviz  sitl_uav.rviz  sitl_uav_ego.rviz  uav_state.rviz
src/uav_bringup/config/safety/: rc_safety_mux.yaml
src/uav_bringup/config/sim/: uav.env
src/uav_bringup/docs/: control_stack.txt  openvins_orbbec_frame_validation.txt
src/uav_bringup/launch/: gz_sim.launch.py  hw_minimal_control.launch.py  hw_minimal_visual_landing.launch.py  hw_mono_camera.launch.py  hw_orbbec_depth_camera.launch.py  hw_visual_landing.launch.py  micro_xrce_agent.launch.py  minimal_control.launch.py  minimal_visual_landing.launch.py  mono_apriltag_detection.launch.py  mono_camera.launch.py  openvins_orbbec.launch.py  openvins_orbbec_720p.launch.py  openvins_orbbec_bootstrap_source.launch.py  openvins_orbbec_bootstrap_source_720p.launch.py  openvins_orbbec_calibration.launch.py  openvins_orbbec_calibration_720p.launch.py  openvins_orbbec_mono_apriltag.launch.py  orbbec_depth_camera.launch.py  profile_defaults.py  px4_planar_odom.launch.py  sitl_uav.launch.py  sitl_uav_ego.launch.py  state_rviz.launch.py  test_home_visual_landing.launch.py  uav_demo_search.launch.py  visual_landing.launch.py
src/uav_bringup/scripts/: apply_openvins_calibration_result.py  freeze_openvins_orbbec_config.py  generate_orbbec_openvins_bootstrap.py  home_visual_landing_test_node.py  monitor_topic_position.py  openvins_launch_shutdown_service_node.py  openvins_supervisor.py  run_px4_gz_uav.sh  sweep_openvins_orbbec.py  uav_demo_search_coordinator.py
src/uav_bringup/test/: test_demo_search_coordinator.py  test_openvins_ov_body_tf.py
src/uav_bringup/uav_bringup/: __init__.py  demo_search_coordinator.py  launch_utils.py  profile_defaults.py
src/uav_description/: CMakeLists.txt  package.xml
src/uav_description/models/uav/: model.config  model.sdf
src/uav_description/models/uav_base/: model.config  model.sdf
src/uav_description/models/uav_base/meshes/: motor_2306_base.dae  motor_2306_bell.dae  propeller_5x3.stl
src/uav_description/urdf/: uav.urdf.xacro
src/uav_mode_supervisor/: CMakeLists.txt  README.md  package.xml
src/uav_mode_supervisor/config/: uav_mode_supervisor.yaml
src/uav_mode_supervisor/include/uav_mode_supervisor/: supervisor_logic.hpp  supervisor_status_utils.hpp
src/uav_mode_supervisor/launch/: uav_mode_supervisor.launch.py
src/uav_mode_supervisor/msg/: SupervisorState.msg
src/uav_mode_supervisor/src/: supervisor_logic.cpp  uav_mode_supervisor_node.cpp
src/uav_mode_supervisor/srv/: CommandSupervisor.srv
src/uav_mode_supervisor/test/: test_supervisor_logic.cpp
src/uav_visual_landing/: CMakeLists.txt  DEBUG_OVERLAY.md  package.xml
src/uav_visual_landing/config/: visual_landing_stable.yaml
src/uav_visual_landing/include/uav_visual_landing/: visual_landing_logic.hpp
src/uav_visual_landing/msg/: AprilTagDetection.msg  LandingControllerState.msg  LandingError.idl  LandingError.msg  LandingStatus.idl  LandingStatus.msg  TargetObservation.msg
src/uav_visual_landing/src/: aruco_detector_node.cpp  visual_landing_node.cpp
src/uav_visual_landing/test/: test_visual_landing_logic.cpp
(+459 files in other folders)
