<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>uav_bringup</name>
  <version>0.1.0</version>
  <description>Hardware-oriented UAV bringup plus shared launch defaults.</description>
  <maintainer email="litianshun.cn@gmail.com">litianshun</maintainer>
  <license>GPL-3.0-only</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>orbbec_camera_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>orbbec_camera</exec_depend>
  <exec_depend>ov_msckf</exec_depend>
  <exec_depend>uav_bridge</exec_depend>
  <exec_depend>uav_visual_landing</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
