<?xml version="1.0"?>
<package format="3">
  <name>uav_description</name>
  <version>0.1.0</version>
  <description>Scaled (0.5x) PX4 x500 Gazebo model package.</description>
  <maintainer email="litianshun.cn@gmail.com">litianshun</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
