<?xml version="1.0"?>
<package format="3">
  <name>uav_description</name>
  <version>0.1.0</version>
  <description>Custom UAV Gazebo model package.</description>
  <maintainer email="litianshun.cn@gmail.com">litianshun</maintainer>
  <license>GPL-3.0-only</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
